<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ualr.firetask.tasks.HomeTaskActivity">
    <item
        android:id="@+id/menu_share"
        android:title="@string/share_menu_label"
        android:icon="@drawable/ic_baseline_share_24"
        android:iconTint="@android:color/white"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_search"
        android:title="@string/search_menu_label"
        android:icon="@drawable/ic_baseline_search_24"
        android:iconTint="@android:color/white"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_settings"
        android:title="@string/account_settings_label"
        app:showAsAction="collapseActionView"
        />
    <item
        android:id="@+id/menu_help"
        android:title="@string/help_label"
        android:icon="@drawable/ic_baseline_help_outline_24"
        app:showAsAction="collapseActionView"
        />
</menu>