<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/firetask_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/firetask_title_padding"
        android:background="@color/colorPrimary"
        android:text="@string/firetask_title"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/firetask_title_text_size"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_marginTop"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="clear_text"
        android:padding="@dimen/input_padding"

        android:hint="@string/email_hint">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="password_toggle"
        android:padding="@dimen/input_padding"
        android:hint="@string/password_hint">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/btn_margin_top"
        android:text="@string/register_btn_label"
        android:textSize="@dimen/btn_text_size"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:id="@+id/helper_link_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/helper_link_margin_top"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/sign_in_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sign_in_link_margin_start"
            android:text="@string/sign_in_btn_label"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>
</LinearLayout>