<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:id="@+id/new_category_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/card_container_margin"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/new_category_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/new_category_title"
        android:textStyle="bold"
        android:textColor="@color/material_on_background_emphasis_high_type"
        android:textSize="@dimen/card_title_text_size"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_category_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/input_padding"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/new_category_hint">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_category_firt_task_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/input_padding"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/first_task_hint">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/new_category_submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/submit_btn_label"
        />
</LinearLayout>