<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/settings_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/settings_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_container_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
>


        <TextView
            android:id="@+id/settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/card_settings_title_margin_bottom"
            android:layout_marginBottom="@dimen/card_settings_title_margin_bottom"
            android:text="@string/settings_title"
            android:textSize="@dimen/card_title_text_size"
            android:textStyle="bold"
            android:textColor="@color/material_on_background_emphasis_high_type"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/change_password_btn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_margin="@dimen/settings_button_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/change_password_btn_label"
            />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/change_email_btn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_margin="@dimen/settings_button_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/change_email_btn_label"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/close_account_btn"
        android:layout_margin="@dimen/settings_button_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/close_account_btn_label"/>

</LinearLayout>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>